2007-01-08  Carlos Garnacho  <carlosg@gnome.org>

	* Network/Ifaces.pm (get_available_configuration_methods): oops,
	elements in mapping table are arrays, not scalars. Definitely add
	ipv4ll support for ubuntu-7.04.

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.1.2

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	* */*.pm: Add support for Ubuntu Feisty, separated from the rest of
	the debian based ones, because there are supposed to be important
	changes.
	* Network/Ifaces.pm (get_available_configuration_methods): add ipv4ll
	support for Ubuntu Feisty.
	* Utils/Platform.pm (init): do not use cache at the moment, might
	give incorrect results if the underlying system requires different
	treatment, and as it's called just one in all s-t-b app lifecicle,
	there shouldn't be any noticeable performance decrease.

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	* configure.in: bump revision number.

2007-01-04  Carlos Garnacho  <carlosg@gnome.org>

	Added support for extensible configuration methods and wireless key
	types, with this, new additions may be handled almost transparently on
	top of s-t-b. This change is backwards compatible with the old format.

	* Network/Ifaces.pm (get_available_configuration_methods): Added, gets
	an extensible list of the interface configuration methods that are
	recognized/available for the current distribution.
	(get_available_encryptions): Added, same for encryption types.
	(get) (set): add a new text field for ethernet-like interfaces
	containing the used configuration method. Ditto for wireless key type
	in wireless interfaces.
	(get_rh_bootproto) (set_rh_bootproto) (get_debian_bootproto)
	(get_slackware_bootproto) (get_bootproto) (get_suse_bootproto)
	(get_gentoo_bootproto) (set_gentoo_bootproto) (set_freebsd_bootproto)
	(get_sunos_bootproto) (get_wep_key): internal changes to follow the
	same formats.
	* IfacesConfig.pm: add a few new fields to the expected DBus struct.
